fix cards gap

--- a/sass/_styles-darwin.scss
+++ b/sass/_styles-darwin.scss
@@ -430,13 +430,15 @@ section {
 // }
 
 .card-columns {
-  column-count: 3;
+  column-count: 1;
   @include media-breakpoint-up(sm) {
-    column-count: 1;
-  }
-  @include media-breakpoint-up(md) {
     column-count: 2;
   }
+  @include media-breakpoint-up(md) {
+    column-count: 3;
+  }
+
+  .card { margin-bottom: 1.25rem; }
 }
 
 .footer {
